# aidente-voice-cli

./: .gitignore  USER_MANUAL.md  config.toml  pyproject.toml  script.txt  test.txt
aidente_voice/: audio_player.py  cli.py  config.py  gacha.py  models.py  parser.py
aidente_voice/pipeline/: assembler.py  orchestrator.py  postprocess.py
aidente_voice/tts/: api_logger.py  client.py  modal_client.py
docs/superpowers/plans/: 2026-03-18-aidente-voice-cli.md
docs/superpowers/specs/: 2026-03-18-aidente-voice-cli-design.md
tests/: test_audio_player.py  test_cli.py  test_concurrent_orchestrator.py  test_config.py  test_gacha.py  test_integration_phase1.py  test_integration_phase2.py  test_models.py  test_orchestrator_gacha.py  test_parser.py
tests/pipeline/: test_assembler.py  test_orchestrator.py  test_postprocess.py
tests/tts/: test_modal_client.py
