[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aidente-voice"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydub>=0.25",
    "ffmpeg-python>=0.2",
    "requests>=2.31",
    "rich>=13.0",
]

[project.scripts]
aidente-voice = "aidente_voice.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
